feat: Design the simple view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="group">Group</string>
     <string name="profile">Profile</string>
     <string name="search_for_services">Search for services</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="phone_number">Phone number</string>
+    <string name="location">Location</string>
+    <string name="submit">Submit</string>
 </resources>
