--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="store">Store</string>
     <string name="good_man">Good man</string>
     <string name="handy_good_man">Handy Good man</string>
+    <string name="offers">Offers</string>
+    <string name="services">Services</string>
+    <string name="appartment_door">Appartment Door</string>
+    <string name="select_date">Select Date</string>
+    <string name="select_time">Select Time</string>
 </resources>
